--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Test Step
         shell: pwsh
         run: |
-          echo "https://${{ secrets.REPO_USER }}:${{ secrets.REPO_PASS }}@github.com" > ~/.git-credentials
-          git config --global credential.helper store --file ~/.git-credentials
+          echo "https://${{ secrets.REPO_USER }}:${{ secrets.REPO_TOKEN }}@github.com" > ~/.config/git/credentials
+          git config --global credential.helper store # --file ~/.config/git/credentials
           git config --global user.name test_ci
           git config --global user.email ${{ secrets.REPO_USER }}
           git clone https://github.com/krankenbro/vc-module-image-tools.git
